@@ -24,9 +24,13 @@ dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.3'
     implementation 'com.fasterxml.jackson.core:jackson-annotations:2.13.3'
 
+    // Reflections
+    implementation 'org.reflections:reflections:0.10.2'
+
     // Other dependencies
     implementation 'org.javassist:javassist:3.28.0-GA'
     implementation 'org.slf4j:slf4j-api:2.0.13'
+    implementation 'org.slf4j:slf4j-api:1.7.32'
     implementation 'io.github.javaunit:autoparams:0.2.3'
     implementation 'org.opentest4j:opentest4j:1.2.0'
     implementation 'org.apiguardian:apiguardian-api:1.1.2'
@@ -45,22 +49,31 @@ java {
     targetCompatibility = JavaVersion.VERSION_23
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+    options.compilerArgs += '--enable-preview'
+}
+
+tasks.withType(Test) {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 sourceSets {
-    main(({
+    main {
         java {
             srcDirs = ['src']
         }
         resources {
             srcDirs = ['res']
         }
-    } as String))
+    }
     test {
         java {
             srcDirs = ['test']
         }
     }
-}
-
-tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8'
 }
